Improve Date readability on phones & fix about us

--- a/style.css
+++ b/style.css
@@ -167,6 +167,13 @@ body {
     transition: all 0.35s;
 }
 
+/* Border to Date */
+
+.date-border {
+    text-shadow: 1px 0 black, 0 1px black, 1px 0 black, 0 1px black;
+    /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
+} 
+
 .site-navigation.show ul {
     left: 0;
 }
